WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93107
[BlackBerry] Crash on layout test in mediaPlayer code
https://bugs.webkit.org/show_bug.cgi?id=93107
Summary
[BlackBerry] Crash on layout test in mediaPlayer code
George Staikos
Reported
2012-08-03 06:35:55 PDT
Crash occurred here: #0 BlackBerry::Platform::MMRPlayer::duration (this=0x0) #1 0x794b8888 in WebCore::MediaPlayerPrivate::percentLoaded (this=0xf28848) at Source/WebCore/platform/graphics/blackberry/MediaPlayerPrivateBlackBerry.cpp:443 #2 0x794b3882 in WebCore::RenderThemeBlackBerry::paintMediaSliderTrack (this=<optimized out>, object=<optimized out>, paintInfo=..., rect=...) at Source/WebCore/platform/blackberry/RenderThemeBlackBerry.cpp:903
Attachments
Patch to fix it
(1.59 KB, patch)
2012-08-03 06:38 PDT
,
George Staikos
no flags
Details
Formatted Diff
Diff
Patch (corrected patch)
(1.59 KB, patch)
2012-08-03 06:41 PDT
,
George Staikos
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
George Staikos
Comment 1
2012-08-03 06:38:11 PDT
Created
attachment 156351
[details]
Patch to fix it
George Staikos
Comment 2
2012-08-03 06:41:44 PDT
Created
attachment 156353
[details]
Patch (corrected patch)
Rob Buis
Comment 3
2012-08-03 07:00:49 PDT
Comment on
attachment 156353
[details]
Patch (corrected patch) LGTM.
Antonio Gomes
Comment 4
2012-08-03 07:03:48 PDT
(In reply to
comment #0
)
> Crash occurred here: > > #0 BlackBerry::Platform::MMRPlayer::duration (this=0x0) > #1 0x794b8888 in WebCore::MediaPlayerPrivate::percentLoaded (this=0xf28848) > at > Source/WebCore/platform/graphics/blackberry/MediaPlayerPrivateBlackBerry.cpp:443 > #2 0x794b3882 in WebCore::RenderThemeBlackBerry::paintMediaSliderTrack > (this=<optimized out>, object=<optimized out>, paintInfo=..., rect=...) > at > Source/WebCore/platform/blackberry/RenderThemeBlackBerry.cpp:903
do we know why it is 0x0? Does the test crash if run standalone?
WebKit Review Bot
Comment 5
2012-08-03 07:14:18 PDT
Comment on
attachment 156353
[details]
Patch (corrected patch) Clearing flags on attachment: 156353 Committed
r124609
: <
http://trac.webkit.org/changeset/124609
>
WebKit Review Bot
Comment 6
2012-08-03 07:14:21 PDT
All reviewed patches have been landed. Closing bug.
George Staikos
Comment 7
2012-08-03 07:21:03 PDT
(In reply to
comment #4
)
> (In reply to
comment #0
) > > Crash occurred here: > > > > #0 BlackBerry::Platform::MMRPlayer::duration (this=0x0) > > #1 0x794b8888 in WebCore::MediaPlayerPrivate::percentLoaded (this=0xf28848) > > at > > Source/WebCore/platform/graphics/blackberry/MediaPlayerPrivateBlackBerry.cpp:443 > > #2 0x794b3882 in WebCore::RenderThemeBlackBerry::paintMediaSliderTrack > > (this=<optimized out>, object=<optimized out>, paintInfo=..., rect=...) > > at > > Source/WebCore/platform/blackberry/RenderThemeBlackBerry.cpp:903 > > do we know why it is 0x0? Does the test crash if run standalone?
Hm actually this might just be a lucky way to catch it. It looks more like an out-of-memory situation that caused a malloc fail, now that I think about it. The change doesn't hurt, but probably in practice doesn't help either, and the code is supposed to go away soon. I'd suggest leave it for now.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug