[BlackBerry] Add a null check for media implementation to fix a crash. https://bugs.webkit.org/show_bug.cgi?id=93107

Reviewed by Rob Buis.

Fixes media/video-size.html.

* platform/blackberry/RenderThemeBlackBerry.cpp:
(WebCore::RenderThemeBlackBerry::paintMediaSliderTrack): Add null check.


Canonical link: https://commits.webkit.org/110955@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124609 268f45cc-cd09-0410-ab3c-d52691b4dbfc